--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPreventiveServices.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPreventiveServices.html
@@ -97,6 +97,7 @@
 								<td style="background-color: #696969; color: #ffffff;">Preventive Services</td>
 								<td style="background-color: #696969; color: #ffffff;">Sequence No.</td>
 								<td style="background-color: #696969; color: #ffffff;">Date</td>
+								<td style="background-color: #696969; color: #ffffff;">Comment</td>
 								<td style="background-color: #696969; color: #ffffff;">Next
 									<Visit></Visit>
 								</td>
@@ -113,8 +114,12 @@
 											<td>
 												<obs conceptId="1418AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="sequence-no-{n}"/>
 											</td>
+
 											<td>
 												<obs conceptId="1410AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="vaccine-date-{n}"/>
+											</td>
+											<td>
+												<obs conceptId="161011AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="comment-{n}"/>
 											</td>
 											<td>
 												<obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
